css/styles.css
/* ... */
.catalog__content-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-gap: 3.4vw;
    row-gap: 3.4vw;
    margin-top: 3.125vw;
}
.grid__item {
    width: 1fr;
    position: relative;
}
.grid__item-img {
    width: 100%;
    display: block;
    max-width: 100%;
}
.grid__item-picture--first {
    position: relative;
}
.grid__item-a--first:hover .grid__item-img--hover {
    opacity: 1;
    transition: 0.3s;
}
.grid__item-img--hover  {
    position: absolute;
    width: 100%;
    display: block;
    max-width: 100%;
    left: 0;
    top: 0;
    opacity: 0;
    transition: 0.3s;
}

.grid__item-p {
    margin-top: 0.7vw;
    font-weight: 300;
    font-size: 0.97vw;
    line-height: 166.19%;
    
}
.grid__item-p--bold {
    margin-top: 0.35vw;
    font-weight: 700;
    font-size: 0.97vw;
    line-height: 166.2%;
}
.grid__item-a {
    text-decoration: none;
    color: inherit;
}

.catalog__content-main-bottom {
    margin-top: 4.4vw;
    width: 100%;
    justify-content: space-around;
    align-items:center ;
}
.content-main__bottom-filler {
    width: 11.8vw;
}
.bottom-end__item {
    font-family: 'Raleway';
    font-style: normal;
    font-weight: 700;
    font-size: 0.97vw;
    line-height: 166.2%;
    color: #000000;
    text-decoration: none;
    margin-left: 0.34vw;
}
.content-main__bottom-mid {
    align-items: center;
}
.content-main__bottom-mid-a {
    font-family: 'Raleway';
    font-style: normal;
    font-weight: 600;
    font-size: 0.97vw;
    line-height: 1.1vw;
    text-transform: uppercase;
    color: #000000;
    margin-right: 0.5vw;
}

/* item css*/

.section-goods__menu-item {
    font-family: 'Raleway';
    font-style: normal;
    font-weight: 600;
    font-size: 0.9vw;
    line-height: 166.4%;
    color: #000000;
    text-decoration: none;
}
.section-goods__menu-item--line{
    padding-left: 0.34vw;
    padding-right: 0.34vw;
}
.section-goods__menu-item--active {
    font-weight: 300;
}

.section-goods__content {
    margin-top: 1.75vw;
    width: 100vw;
    margin-left: 0;
    margin-right: 0;
    display: flex;
}
.section-goods__img {
    width: 100%;
    display: block;
    max-width: 100%;
}
.section-goods__content-wrap {
    width: 50vw;
}
.section-goods__content-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-gap: 2.7vw;
    row-gap: 2.7vw;
    margin-top: 2.7vw;
    position: relative;
}
.section-goods__grid-item-video {
    position: relative;
}
.section-goods__grid-item-video-a {
    position: absolute;
    bottom: 11.94vw;
    right: 9.375vw;
}
.section-goods__grid-item-video-icon {
    width: 4.86vw;
}
.section-goods__content-wrapper {
    margin-left: 8.2vw;
    width: 30vw;
}
.section__span-gray {
    font-family: 'Raleway';
    font-style: normal;
    font-weight: 400;
    font-size: 0.73vw;
    line-height: -0.3em;
    text-transform: uppercase;
    color: #B5B5B5;
}
.section__title-small {
    font-family: 'Dela Gothic One';
    font-style: normal;
    font-weight: 400;
    font-size: 1.25vw;
    line-height: 151.3%;
    text-transform: uppercase;
    color: #000000;
}
.section-goods__content-title {
    margin-top: 2.7vw;
}
.section__text {
    font-family: 'Raleway';
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
    line-height: 166.19%;
    font-feature-settings: 'pnum' on, 'lnum' on;

    color: #000000;
}
.section__quantity {
    margin-left: 3.3vw;
    align-items: center;
}
.section__quantity-icon {
    background-color: #F4F4F4;
    padding: 0.3vw 0 0.3vw 0;
    cursor: pointer;
}
.section__quantity-num {
    font-family: 'Raleway';
    font-style: normal;
    font-weight: 400;
    font-size: 1vw;
    line-height: 166.19%;
    font-feature-settings: 'pnum' on, 'lnum' on;
    color: #000000;
    padding: 0 1vw 0 1vw;
}
.section-goods__content-size {
    margin-top: 1.4vw;
}
.content-size__item {
    text-decoration: none;
    font-family: 'Raleway';
    font-style: normal;
    font-weight: 400;
    font-size: 1vw;
    line-height: 166.19%;
    font-feature-settings: 'pnum' on, 'lnum' on;
    color: #000000;
    padding-right: 1.05vw;
}
.content-size__item--active{
    font-weight: 700;
}
.section-goods__content-size-table {
    font-family: 'Raleway';
    font-style: normal;
    font-weight: 400;
    font-size: 0.84vw;
    line-height: 1em;
    font-feature-settings: 'pnum' on, 'lnum' on;
    color: #000000;
    margin-top: 0.5vw;
    text-underline-offset: 0.3rem;
}
.section-goods__content-price {
    font-family: 'Raleway';
    font-style: normal;
    font-weight: 700;
    font-size: 1vw;
    line-height: 166.2%;
    font-feature-settings: 'pnum' on, 'lnum' on;
    color: #000000;
    margin-top: 2.7vw;
}
.section-goods__button {
    padding: 1.2vw 5.5vw;
}
.section-goods__about {
    margin-top: 4.9vw;
    margin-top: 0.7vw;
}
.section__p-title {
    font-family: 'Raleway';
    font-style: normal;
    font-weight: 700;
    font-size: 1.1vw;
    font-feature-settings: 'pnum' on, 'lnum' on;
    color: #000000;
}
.section-goods__about-item-box {
    justify-content: space-between;
    margin-top: 1vw;
}
.section-goods__about-item-svg {
    width: 1vw;
    height: 1vw;
}
.section-goods__about-p {
    margin-top: 1.2vw;
    font-family: 'Raleway';
    font-style: normal;
    font-weight: 300;
    font-size: 1vw;
    line-height: 1em;
    font-feature-settings: 'pnum' on, 'lnum' on;
    color: #000000;
}
.section-goods__about-hr {
    margin-top: 1.2vw;
    background-color: #1f1f1f;
    height: 1px;
}
.section-goods__carousel {
    margin-top: 9vw;
}
.section-goods__carousel-top {
    align-items: center;
    justify-content: space-between;
}
.section-goods__carousel-title {
    font-family: 'Dela Gothic One';
    font-style: normal;
    font-weight: 400;
    font-size: 2.5vw;
    line-height: 140.3%;
    text-transform: uppercase;
    color: #000000;
}
.section-goods__carousel-arrow {
    cursor: pointer;
    background: none;
}
.carousel-slider__item--goods {
    height: 30vw;
}
/* ... */

